# Evaluations_on_Robotic_Choreographies

./: Evaluations_on_Robotic_Choreographies.ipynb  Preprocessing_EDA.ipynb  README.md  eda_and_preprocessing.ipynb  project_tasks.txt  pyproject.toml
classification/: all_models_results_persistent.joblib  classifier.ipynb  classifiers.ipynb  tabular_quickstart.ipynb
classification/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
classification/saved_overall_best_models/: OVERALL_BEST_CatBoost_GridCV_PublicInvolvement.joblib  OVERALL_BEST_XGBoost_GridCV_HumanCharacterization.joblib  OVERALL_BEST_XGBoost_GridCV_StoryTelling.joblib
classification/saved_tuned_models/: CatBoost_GridCV_EvaluationChoreographyHumanCharacterization.joblib  CatBoost_GridCV_EvaluationChoreographyHumanReproducibility.joblib  CatBoost_GridCV_EvaluationChoreographyMovementTechnique.joblib  CatBoost_GridCV_EvaluationChoreographyRhythm.joblib  CatBoost_GridCV_EvaluationChoreographySpaceUse.joblib  CatBoost_GridCV_EvaluationChoreographyStoryTelling.joblib  LogisticRegression_GridCV_EvaluationChoreographyHumanCharacterization.joblib  LogisticRegression_GridCV_EvaluationChoreographyHumanReproducibility.joblib  LogisticRegression_GridCV_EvaluationChoreographyMovementTechnique.joblib  LogisticRegression_GridCV_EvaluationChoreographyPublicInvolvement.joblib  (+8 more)
data/: cleaned_choreographies.csv  complete_dataset.xlsx  dataset_description.txt
data/regression/: gitkit
regression/: Regressor.ipynb
shap/: final_summary.csv  report_snippets.md  settings.yaml  shap_analysis.ipynb
(+242 files in other folders)
