[project]
name = "evaluations-on-robotic-choreographies"
version = "0.1.0"
description = "Machine Learning project for evaluating robotic choreographies with 14 models (7 classifiers and 7 regressors)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "shap>=0.42.0",
    "openpyxl>=3.1.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "scipy>=1.11.0",
    "joblib>=1.3.0",
    "pip>=25.1.1",
    "xgboost>=3.0.2",
    "tabpfn>=2.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
